tests/build/widget_new/missing_semi_in_when1.stderr
error: expected `,`
  --> $DIR/missing_semi_in_when1.rs:11:13
   |
11 |             cursor = CursorIcon::Hand;
   |             ^^^^^^
